<resources>
    <string name="app_name">Mobile-Cinema-Lab1</string>
    <string name="sign_up">Регистрация</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="i_have_already_account">У меня уже есть аккаунт</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="watch">Смотреть</string>
    <string name="in_trend">В тренде</string>
    <string name="you_watched">Вы смотрели</string>
    <string name="newMovies">Новое</string>
    <string name="for_you">Для вас</string>
    <string name="select_preferences">Указать интересы</string>
    <string name="main">Главное</string>
    <string name="compilation">Подборка</string>
    <string name="collections">Коллекции</string>
    <string name="profile">Профиль</string>
    <string name="empty_compilation">Новые фильмы\nв подборке закончились</string>
    <string name="shots">Кадры</string>
    <string name="episodes">Эпизоды</string>
    <string name="edit">Изменить</string>
    <string name="discussions">Обсуждения</string>
    <string name="history">История</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="description">Описание</string>
    <string name="type_message">Напишите сообщение…</string>


    <string name="author_plus_time">%1$s • %2$s</string>
    <string name="first_and_last_name">%1$s %2$s</string>
    <string name="create_collection">Создать коллекцию</string>
    <string name="collection_naming">Название</string>
    <string name="select_icon">Выбрать иконку</string>
    <string name="save">Сохранить</string>
    <string name="edit_collection">Изменить коллекцию</string>
    <string name="delete">Удалить</string>

    <string name="error_update_token">Ошибка обновления токена</string>
    <string name="error_get_collections">Не удалось загрузить коллекции</string>
    <string name="error_get_compilation">Не удалось загрузить подборку</string>
    <string name="error_dont_touch_here">Не надо сюда нажимать!!</string>
    <string name="error_films_is_empty">Фильмы закончились! :(</string>
    <string name="error_get_episode_time">Ошибка получения времени просмотра</string>
    <string name="error_get_episodes">Ошибка получения эпизодов</string>
    <string name="error_get_user_data">Ошибка получения информации о пользователе</string>
    <string name="error_create_favourite_collection">Ошибка создания избранного</string>
    <string name="error_get_collection_movies">Ошибка получения фильмов коллекции</string>
    <string name="error_empty_chat_message">Сообщение пустое</string>
    <string name="error_edit_favourite_collection">Нельзя редактировать/удалять Избранное</string>


    <string name="error_get_new_movies">Ошибка получения новых фильмов</string>
    <string name="error_get_in_trend_movies">Ошибка получения фильмов в тренде</string>
    <string name="error_get_for_you_movies">Ошибка получения фильмов для вас</string>
    <string name="error_get_last_watched_movie">Ошибка получения последнего просмотренного фильма</string>
    <string name="error_get_cover_image">Ошибка получения фильма для обложки</string>
    <string name="error_send_avatar">Ошибка загрузки аватарки</string>
    <string name="error_get_permissions">Нет доступа к медиа</string>


    <string name="chat_short_name">%1$s%2$s</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>


    <string name="today">Сегодня</string>
    <string name="date_short">%1$s %2$s</string>

    <string name="january">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="june">Июня</string>
    <string name="july">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октября</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>


    <!--  not need to translate  -->
    <string name="icon">icon</string>
    <string name="problems">Problems</string>


</resources>