<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toTopOf="@+id/enterName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toSignInButton"
                style="@style/empty_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"

                android:letterSpacing="0.0"
                android:text="@string/i_have_already_account"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:strokeColor="@color/grey" />

            <Button
                android:id="@+id/logUpButton"
                style="@style/full_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@+id/toSignInButton"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/enterName"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/enterSurname"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/enterSurname"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/enterEmail"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/enterEmail"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/enterPassword"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/enterPassword"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/repeatPassword"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/repeatPassword"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="Повторите пароль"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/logUpButton"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>