<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImageView"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lucifer"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/roundedImageViewRounded" />

    <TextView
        android:id="@+id/edit"
        style="@style/orange_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/userImageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/userName"
        style="@style/white_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Воланд Иванов" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:letterSpacing="0.0"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userImageView"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="voland.ivanov@gmail.com" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/discussionsLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="discussionsText,discussionsIcon"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="210dp" />

    <ImageView
        android:id="@+id/discussionsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        app:srcCompat="@drawable/chat_icon" />

    <TextView
        android:id="@+id/discussionsText"
        style="@style/white_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/discussions"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/discussionsIcon"
        app:layout_constraintStart_toEndOf="@+id/discussionsIcon"
        app:layout_constraintTop_toTopOf="@+id/discussionsIcon" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/historyLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="historyIcon,historyText"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="254dp" />

    <ImageView
        android:id="@+id/historyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/discussionsIcon"
        app:srcCompat="@drawable/clock_icon" />

    <TextView
        android:id="@+id/historyText"
        style="@style/white_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/history"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/historyIcon"
        app:layout_constraintStart_toEndOf="@+id/historyIcon"
        app:layout_constraintTop_toTopOf="@+id/historyIcon" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/settingsLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="settingsIcon,settingsText"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="299dp" />

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/historyIcon"
        app:srcCompat="@drawable/settings_icon" />

    <TextView
        android:id="@+id/settingsText"
        style="@style/white_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/settings"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsIcon"
        app:layout_constraintStart_toEndOf="@+id/settingsIcon"
        app:layout_constraintTop_toTopOf="@+id/settingsIcon" />

    <Button
        android:id="@+id/exitButton"
        style="@style/empty_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/settingsIcon" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/dataGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="userImageView,edit,guideline6,userName,userEmail,discussionsLayer,discussionsIcon,discussionsText,historyLayer,historyIcon,historyText,settingsLayer,settingsIcon,settingsText,exitButton" />


</androidx.constraintlayout.widget.ConstraintLayout>